(style/fix) squashes some bugs with the loop route, implements material design features in the map

--- a/client/src/styles/scss/_map3d.scss
+++ b/client/src/styles/scss/_map3d.scss
@@ -26,6 +26,7 @@
 }
 
 #map {
+  margin-top: 10px;
   position: absolute;
   top: 0;
   bottom: 0;
