--- a/client/src/styles/scss/_mobile.scss
+++ b/client/src/styles/scss/_mobile.scss
@@ -1,136 +1,3 @@
-/* if you change these variables, make sure you change the legend colors in the RouteService to match*/
-
-
-$shortest_path: #2176C7;
-$min_elevation_path: #C61C6F;
-$fastest_biking: #2aa198;
-$fastest_walking: #D9A800;
-$loop_path: #30A07A;
-
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
-@import 'map3d';
-@import 'markers2d';
-@import 'markers3d';
-@import 'mapControlsLegend';
-@import 'graph2d';
-
-body {
-  background-color: white;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  font-family: 'Open Sans', sans-serif;
-}
-
-#main-content md-tabs md-tab-item {
-  color: black;
-}
-
-#locator {
-  fill: currentColor; 
-  vertical-align: middle;
-  display: inline-block;
-  line-height: 1;
-}
-
-#toolbar {
-  font-size: 2em;
-  margin-bottom: 8px;
-}
-
-md-whiteframe {
-  background: #fff;
-  margin: 5px;
-  padding: 5px;
-  width: 400px;
-  // height: 400px;
-  position: relative;
-}
-md-tabs.md-default-theme,
-md-tabs md-tabs-wrapper {
-  border-width: 0 0 1px;
-  border-style: solid;
-}
-
-.md-button.md-fab.md-mini {
-  line-height: 4rem;
-  width: 3.5rem;
-  height: 2rem;
-}
-
-.switch-icon {
-  display: block;
-}
-.switch-icon-mobile {
-  display: none;
-}
-
-#arrows-container {
-  width:30px;
-  height: 45px;
-}
-  
-#reverse-btn {
-  min-width: 45px;
-  max-height: 35px
-}
-
-#app-name {
-  vertical-align: middle;
-  font-size: 48px;
-}
-
-#sidebar-icon {
-  display: none;
-}
-#sidebar-btn { 
-  display: none;
-}
-#mobile-route-pnl {
-  display: none;
-}
-
-.md-button.md-icon-button {
-  margin: 10px 0 0 0;
-  height: 25px;
-  width: 25px;
-  i {
-    font-size: 18px;
-  }
-}
-.get-directions-btn {
-  display: none;
-}
-
-.md-input {
-  line-height: 100px;
-}
-
-#vertical-container {
-  height: 200px;
-  width: 400px;
-}
-
-.repeated-item {
-  border-bottom: 1px solid #ddd;
-  box-sizing: border-box;
-  height: 40px;
-  padding-top: 10px;
-}
-
-.distance-text {
-  float: right;
-  padding-right: 10px;
-}
-.map-container, .map-legend.wax-legend {
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
-}
-
-#desktop-route-pnl {
-  margin-top: 0px;
-}
-
 //mobile responsive styling
 @media only screen and (max-device-width: 768px) {
    #app-name {
@@ -293,24 +160,3 @@ md-tabs md-tabs-wrapper {
    }
   
 }
-
-// .md-virtual-repeat-container {
-//   margin-top: 10px;
-// }
-
-// #route-sidebar {
-//   font-size: 25px;
-// }
-// #distance-placeholder {
-//   font-size: 48px;
-// }
-
-// // #route-sidebar {
-//   md-divider {
-//     margin: 10px 0px;
-//   }
-//   .md-raised {
-//     font-size: 12px;
-//     margin-top: 20px;
-//   }
-// }
